Fix gradient animation, AuthView background overflow

--- a/src/Views/AuthView/AuthView.css
+++ b/src/Views/AuthView/AuthView.css
@@ -7,12 +7,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+  flex: 1;
 
   animation: gradient 15s ease infinite;
   background-size: 200% 200%;
 
   width: 100%;
-  height: 100%;
 }
 
 .AuthViewFormContainer {
